<?xml version="1.0" encoding="utf-8"?>
<!--(Step 4: Design the create board screen.)-->
<!--START-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreateBoardActivity"
    android:background="@drawable/create_board_bg"
    >

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/AppTheme.AppBarOverlay">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar_create_board_activity"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_board_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Create Board"
            android:textColor="#B2BEB5"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:backgroundTint="#413F42">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_board_image"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_board_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textColorHint="@color/white"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_board_name_create_board_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/board_name"
                        android:inputType="text"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_create_board_create_board_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/btn_create_board_bg"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
    <!--END-->